force-app/main/default/objects/Policy_Run_Audit__c/Policy_Run_Audit__c.object-meta.xml
<CustomObject>
    <label>Policy Run Audit</label>
    <nameField>
        <displayFormat>PRA-{000000}</displayFormat>
        <label>Policy Run Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Run Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>