force-app/main/default/objects/Policy_Run_Audit__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Policy Run Audits</relationshipLabel>
    <relationshipName>Policy_Run_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>