force-app/main/default/objects/Policy_Run_Audit__c/fields/Chunks_Used__c.field-meta.xml
<CustomField>
    <fullName>Chunks_Used__c</fullName>
    <label>Chunks Used JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>