force-app/main/default/objects/Policy_Run_Audit__c/fields/Citations__c.field-meta.xml
<CustomField>
    <fullName>Citations__c</fullName>
    <label>Citations JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>