force-app/main/default/objects/Policy_Run_Audit__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>