force-app/main/default/objects/Policy_Run_Audit__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>ALLOW</fullName><default>false</default><label>ALLOW</label></value>
            <value><fullName>BLOCK</fullName><default>false</default><label>BLOCK</label></value>
            <value><fullName>MANUAL_REVIEW</fullName><default>true</default><label>MANUAL_REVIEW</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>