force-app/main/default/objects/Policy_Run_Audit__c/fields/Missing_Information__c.field-meta.xml
<CustomField>
    <fullName>Missing_Information__c</fullName>
    <label>Missing Information JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>