force-app/main/default/objects/Policy_Run_Audit__c/fields/Model_Response__c.field-meta.xml
<CustomField>
    <fullName>Model_Response__c</fullName>
    <label>Model Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>