force-app/main/default/objects/Policy_Run_Audit__c/fields/Request_Mode__c.field-meta.xml
<CustomField>
    <fullName>Request_Mode__c</fullName>
    <label>Request Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>MANUAL_INPUT</fullName><default>true</default><label>MANUAL_INPUT</label></value>
            <value><fullName>STORED_RETRIEVAL</fullName><default>false</default><label>STORED_RETRIEVAL</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>