force-app/main/default/objects/Policy_Run_Audit__c/fields/Retrieval_Query__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Query__c</fullName>
    <label>Retrieval Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>