force-app/main/default/objects/Policy_Run_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>